@@ -13,6 +13,7 @@
 	main/multi.h, main/network.c: move mission list handling functionality
 	to mission.c, remove unnecessary load_mission calls in menu.c
 	* main/game.c: remove unnecessary build_mission_list call
+	* main/mission.c, main/mission.h: correct comments about anarchy-only
 
 2004-10-21  Martin Schaffner  <maschaffner@gmx.ch>
 
